--- a/dingo_control/config/control_omni.yaml
+++ b/dingo_control/config/control_omni.yaml
@@ -12,14 +12,14 @@ dingo_velocity_controller:
   pose_covariance_diagonal: [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 0.03]
   twist_covariance_diagonal: [0.001, 0.001, 0.001, 1000000.0, 1000000.0, 0.03]
   cmd_vel_timeout: 0.25
-  odom_from_vel: false
+  odom_from_vel: true
 
   k_l: 0.1
   k_r: 0.1
 
   # Odometry fused with IMU is published by robot_localization, so
   # no need to publish a TF based on encoders alone.
-  enable_odom_tf: false
+  enable_odom_tf: true
 
   # Wheel separation and radius multipliers
   wheel_separation_multiplier: 1.0 # default: 1.0
