--- a/dingo_control/config/control_omni.yaml
+++ b/dingo_control/config/control_omni.yaml
@@ -12,7 +12,7 @@ dingo_velocity_controller:
   pose_covariance_diagonal: [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 0.03]
   twist_covariance_diagonal: [0.001, 0.001, 0.001, 1000000.0, 1000000.0, 0.03]
   cmd_vel_timeout: 0.25
-  odom_from_vel: true
+  odom_from_vel: false
 
   k_l: 0.1
   k_r: 0.1
